Fix spacing around eye icon in FilterTable, for IE

--- a/src/components/FilterTable.scss
+++ b/src/components/FilterTable.scss
@@ -35,6 +35,7 @@ $controlsColorLighter: lighten($controlsColor, 20%);
 }
 .filter-table__eye > svg {
   width: 40px;
+  height: 40px;
 
   @media(max-width:992px) and (min-width:768px){
     left: -57px;
